# ksm

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  example_config.toml  justfile  tarpaulin.toml
.claude/: format-hook.sh
.claude/agents/: kitty-remote-control-expert.md  qa-spec-tester.md
kitty-lib/: Cargo.toml  README.md
kitty-lib/src/: lib.rs  types.rs  utils.rs
kitty-lib/src/commands/: close_tab.rs  focus_tab.rs  launch.rs  ls.rs  mod.rs  navigate_tab.rs  set_tab_title.rs
kitty-lib/src/executor/: kitty_executor.rs  mock_executor.rs  mod.rs
kitty-lib/tests/: integration_test.rs  test_environment_test.rs
kitty-lib/tests/common/: mod.rs
ksm-cli/: Cargo.toml  README.md
ksm-cli/src/: app.rs  cli.rs  config.rs  kitty.rs  lib.rs  main.rs  session.rs  utils.rs
ksm-cli/src/cmd/: close_all_session_tabs.rs  key.rs  list.rs  mod.rs  new_tab.rs  next_tab.rs  prev_tab.rs  rename_tab.rs  select.rs
ksm-cli/src/config/: auto_profile.rs  discovery.rs  mod.rs  types.rs
ksm-cli/tests/: config_tests.rs  key_tests.rs  kitty_mock_test.rs  utils_tests.rs
specs/: 2025-01-16-robust-session-identification.md  25-01-13-session-aware-tab-navigation.md  25-01-14-kitty-integration-testing.md
src/: app.rs  cli.rs  config.rs  kitty.rs  lib.rs  main.rs  utils.rs
src/cmd/: key.rs  list.rs  mod.rs  select.rs
tests/: config_tests.rs  key_tests.rs  utils_tests.rs
tests/fixtures/: kitty.test.conf  ksm_test_config.toml
