[package]
name = "kitty-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
image = "0.25"
image-compare = "0.4"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
uuid = { version = "1.0", features = ["v4"] }
