[package]
name = "ksm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
skim = "0.10"
glob = "0.3"
shellexpand = "3.1"
kitty-lib = { path = "../kitty-lib" }
