[package]
name = "ksm"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
skim = "0.10"
glob = "0.3"
shellexpand = "3.1"
regex = "1.0"
hostname = "0.4"
kitty-lib = { path = "../kitty-lib" }

[dev-dependencies]
assert_fs = "1.0"
predicates = "3.0"
